--- a/main.css
+++ b/main.css
@@ -6,8 +6,8 @@
 #calculator{
     display: grid;
      
-    grid-template-columns:"auto auto auto auto auto";
-    grid-template-rows:"auto auto auto auto";
+    grid-template-columns:auto auto auto auto auto;
+    grid-template-rows:auto auto auto auto;
     
     grid-template-areas:
     "seven eight nine divide"
