--- a/main.css
+++ b/main.css
@@ -9,8 +9,7 @@
     grid-template-columns:auto auto auto auto auto;
     grid-template-rows:auto auto auto auto;
     
-    grid-template-areas:
-    "seven eight nine divide"
+    grid-template-areas:"seven eight nine divide"
     "four five six multi"
     "one two three minus plus"
     "nought dec equals reset";
