--- a/main.css
+++ b/main.css
@@ -7,10 +7,10 @@
     grid-template-columns:auto auto auto auto auto;
     grid-template-rows:auto auto auto auto;
     
-    grid-template-areas:"seven eight nine divide"
-    "four five six multi"
+    grid-template-areas:"seven eight nine divide ."
+    "four five six multi ."
     "one two three minus plus"
-    "nought dec equals reset";
+    "nought dec equals reset .";
 
 }
     
