--- a/main.css
+++ b/main.css
@@ -5,16 +5,19 @@
     display: grid;
      
     grid-template-columns:auto auto auto auto auto;
-    grid-template-rows:auto auto auto auto;
+    grid-template-rows:auto auto auto auto auto;
     
-    grid-template-areas:"seven eight nine divide ."
+    grid-template-areas:"display display display display display"
+    "seven eight nine divide ."
     "four five six multi ."
     "one two three minus plus"
     "nought dec equals reset .";
 
 }
     
-
+#display{
+    grid-area:display;
+}
 #one{
     grid-area:one;
 }
