--- a/main.css
+++ b/main.css
@@ -1,22 +1,31 @@
-
+#container{
+    
+    width:100vw;
+    height:100vh;
+    max-width: 100%;
+}
     
 
 #calculator{
+    width:100%;
+    height:100%;
     display: grid;
-     
     grid-template-columns:auto auto auto auto auto;
-    grid-template-rows:auto auto auto auto auto;
-    
+    grid-template-rows:15vh auto auto auto auto;
     grid-template-areas:"display display display display display"
-    "seven eight nine divide ."
-    "four five six multi ."
-    "one two three minus plus"
-    "nought dec equals reset .";
+    "seven eight nine divide equals"
+    "four five six multi equals"
+    "one two three minus equals"
+    "nought dec reset plus equals";
+     
+    
 
 }
     
 #display{
     grid-area:display;
+    font-size: 15vh;
+    text-align: right;
 }
 #one{
     grid-area:one;
@@ -68,4 +77,7 @@
 }
 #dec{
     grid-area: dec;
+}
+.digit{
+    font-size:10vh;
 }
