--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@
     width:100vw;
     height:100vh;
     max-width: 100%;
+    max-height: 100%;
 }
     
 
@@ -26,6 +27,8 @@
     grid-area:display;
     font-size: 15vh;
     text-align: right;
+    border: 3px solid #2F96EF;
+    border-radius: 5px;
 }
 #one{
     grid-area:one;
