--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@
     display: grid;
     grid-template-columns:auto auto auto auto auto;
     grid-template-rows:15vh auto auto auto auto;
-    grid-template-areas:"display display display display display"
+    grid-template-areas:"display display display display sign"
     "seven eight nine divide equals"
     "four five six multi equals"
     "one two three minus equals"
@@ -24,11 +24,15 @@
 }
     
 #display{
-    grid-area:display;
-    font-size: 15vh;
+    grid-area: display;
+    font-size: 10vh;
     text-align: right;
-    border: 3px solid #2F96EF;
-    border-radius: 5px;
+    padding:10px;
+
+    
+}
+#sign{
+    grid-area: sign;
 }
 #one{
     grid-area:one;
@@ -82,5 +86,8 @@
     grid-area: dec;
 }
 .digit{
-    font-size:10vh;
+    font-size:8vh;
+    text-shadow: -1px -1px 1px #fff, 1px 1px 1px #000;
+	color: #9c8468;
+	opacity: 0.3;
 }
