--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@
     
 
 #calculator{
+    /* prescence plus layout */
     width:100%;
     height:100%;
     display: grid;
@@ -18,7 +19,12 @@
     "four five six multi equals"
     "one two three minus equals"
     "nought dec reset plus equals";
-     
+    grid-row-gap: 2%;
+    grid-column-gap: 1%;
+    /* styling */
+    border:solid 2px black;
+    padding: 2%;
+   
     
 
 }
@@ -28,6 +34,7 @@
     font-size: 10vh;
     text-align: right;
     padding:10px;
+    border: solid 2px blue;
 
     
 }
@@ -86,8 +93,20 @@
     grid-area: dec;
 }
 .digit{
+    background-color: #2f194b;
     font-size:8vh;
     text-shadow: -1px -1px 1px #fff, 1px 1px 1px #000;
 	color: #9c8468;
-	opacity: 0.3;
+    opacity: 0.3;
+    
+    box-shadow: 0 0 0 1px rgb(172, 65, 175) inset,
+                0 0 0 2px rgba(255,255,255,0.15) inset,
+                0 8px 0 0 rgba(155, 78, 161, 0.7),
+                0 8px 0 1px rgba(0,0,0,.4),
+                0 8px 8px 1px rgba(0,0,0,0.5);
+}
+.digit:active{
+    box-shadow: 0 0 0 1px #F0D264 inset,
+                0 0 0 2px rgba(255,255,255,0.15) inset,
+                0 0 0 1px rgba(0,0,0,0.4);
 }
