--- a/main.css
+++ b/main.css
@@ -34,12 +34,24 @@
     font-size: 10vh;
     text-align: right;
     padding:10px;
-    border: solid 2px blue;
+                
+    border: solid 2px #9b4ea1b3;
+    box-shadow: 
+    inset 0 2px 0 rgba(0,0,0,.2), 
+    0 0 4px rgba(0,0,0,0.1);
+    border-radius: 1%;
 
     
 }
 #sign{
     grid-area: sign;
+    border:solid 2px;
+    box-shadow: 
+    inset 0 2px 0 rgba(0,0,0,.2), 
+    0 0 4px rgba(0,0,0,0.1);
+    
+    text-align: center;
+    font-size: 10vh;
 }
 #one{
     grid-area:one;
@@ -95,18 +107,18 @@
 .digit{
     background-color: #2f194b;
     font-size:8vh;
-    text-shadow: -1px -1px 1px #fff, 1px 1px 1px #000;
-	color: #9c8468;
+    text-shadow: -1px -1px 1px rgb(43, 27, 27), 1px 1px 1px rgb(129, 46, 46);
+	color: #b48043;
     opacity: 0.3;
     
     box-shadow: 0 0 0 1px rgb(172, 65, 175) inset,
                 0 0 0 2px rgba(255,255,255,0.15) inset,
-                0 8px 0 0 rgba(155, 78, 161, 0.7),
+                0 8px 0 0 #9b4ea1b3,
                 0 8px 0 1px rgba(0,0,0,.4),
                 0 8px 8px 1px rgba(0,0,0,0.5);
 }
 .digit:active{
-    box-shadow: 0 0 0 1px #F0D264 inset,
+    box-shadow: 0 0 0 1px rgb(197, 79, 191) inset,
                 0 0 0 2px rgba(255,255,255,0.15) inset,
                 0 0 0 1px rgba(0,0,0,0.4);
 }
