--- a/main.css
+++ b/main.css
@@ -38,6 +38,7 @@
     background-image: linear-gradient(#4f8f05 0%, #395c0c 100%);            
     border: solid 2px #9b4ea1b3;
     border-radius: 10px;
+    font-family: 'Orbitron', sans-serif;
 
     
 }
