added github link with correct coloring

--- a/main.css
+++ b/main.css
@@ -167,6 +167,8 @@
 #github{
     width:100%;
     height:100%;
+    background-image: linear-gradient(#282d31 0%, #333b41 100%)
+    
     
     
 }
